<resources>
    <string name="alert_network_problem_pease_try_again">Network Problem. Please Try after some Time.</string>
    <string name="app_name">The Shivsamarth Multistate Co.Op. Credit Society Ltd, Talamavale</string>
    <string name="lbl_exit">Really Want To Exit?(Y/N)</string>
    <string name="bank_name">The Shivsamarth Multistate Co.Op. Credit Society Ltd, Talamavale</string>
    <string name="hello_world">Hello world!</string>
    <string name="alert_sup">The Application Does Not Support This Device.</string>
    <string name="action_settings">Settings</string>
    <string name="app_name1">PAT MBS</string>
    <string name="map_key">AIzaSyB3z-E-zchBsS1Q9Vq2RKaP2h1CnUZ5scM</string>
    <string name="url">http://listspl.ddns.net:8087/axis2/services/FrontLineWebServices</string>
    <string name="alert_179_2">Problem At Server Please Try After Sometime.</string>
    <string name="namespace">http://frontline.list</string>
    <string name="soap_action">FrontLineWebServices</string>
    <string name="lbl_current_accnt">Current/Savings Account</string>
    <string name="lbl_term_deposit">Term Deposit</string>
    <string name="alert_mpinexp">Your Mpin Is Expired Within Next</string>
    <string name="login_alert_002">MPIN is Expired</string>
    <string name="login_alert_003">Your Last Session Is Not Closed Yet</string>
    <string name="login_alert_004">Invalid User Name or MPIN</string>
    <string name="login_alert_005">Your Account Has Been Locked For Today</string>
    <string name="login_alert_006">Your Account Has Been Locked. Please Contact Bank.</string>
    <string name="login_alert_007">Registered Mobile No. Does not Match.</string>
    <string name="login_alert_008">Something went Wrong.</string>
    <string name="login_alert_009">You Are Trying To Login With Different Device.</string>
    <string name="login_alert_010">Enter Valid Customer Id</string>
    <string name="alert_login_fail">Invalid Login Credentials.</string>
    <string name="alert_prblm_login">Problem In Login.</string>
    <string name="lbl_enter_bankname">Enter Bankname</string>
    <string name="alert_oldversionupdate">Latest Version Of Your Application Is Available On Play Store Do You Want To Update ?</string>
    <string name="alert_oldversion">Your Application Version Is Outdated Please Update</string>
    <string name="lbl_own_account_trans">Own Account Transfer</string>
    <string name="lbl_creditacc">Credit Account</string>
    <string name="alert_188">Credit Account Not Found</string>
    <string name="lbl_account">Account</string>
    <string name="cheque_serial">Cheque Serial</string>
    <string name="lbl_from_cheque_no">From Cheque No</string>
    <string name="lbl_to_cheque_no">To Cheque No</string>
    <string name="lbl_reason">Reason</string>
    <string name="lbl_stop_payment">Stop Payment</string>
    <string name="lbl_001">Yes</string>
    <string name="lbl_002">No</string>
    <string name="lbl_003">Click To Continue!</string>
    <string name="lbl_004">CR</string>
    <string name="lbl_005">DR</string>
    <string name="lbl_006">Ok</string>
    <string name="lbl_007">Do You Want To Exit From App?</string>
    <string name="lbl_008">Customer Id or User ID</string>
    <string name="lbl_009">Mpin</string>
    <string name="lbl_010">Sign In</string>
    <string name="lbl_011">Forgot MPIN</string>
    <string name="lbl_012">Register</string>
    <string name="lbl_014"><u>Know Your Customer ID ?</u></string>
    <string name="lbl_015">Registered Mobile No.</string>
    <string name="lbl_016">Validate</string>
    <string name="lbl_017">Institude code</string>
    <string name="lbl_018">Enter 16 Digit Account Number </string>
    <string name="lbl_019">Registered Mobile Number</string>
    <string name="lbl_020">Submit</string>
    <string name="lbl_021">Get Customer Id</string>
    <string name="alert_err">Error Occured</string>
    <string name="alert_000">Network Unavailable. Please Try Again.</string>
    <string name="lbl_apptype">F</string>
    <string name="alert_001">Enter Valid Customer Id</string>
    <string name="alert_002">Enter Valid Mobile Number</string>
    <string name="alert_003">Customer Already Registered</string>
    <string name="alert_004">Invalid Registration Credentials.</string>
    <string name="alert_005">This Facility Is Not Available For Corporate Customer</string>
    <string name="alert_006">Problem At Server. Please Try Again.</string>
    <string name="alert_007">You Are Trying To Login With Different Device.</string>
    <string name="alert_008">Please Enter Account Number</string>
    <string name="alert_009">Please Enter 16 Digit Account Number </string>
    <string name="alert_010">Enter Mobile Number</string>
    <string name="alert_011">Invalid Mobile Number</string>
    <string name="login_alert_011">Enter Valid MPIN</string>
    <string name="lbl_Services">Services</string>
    <string name="lbl_Change_MPIN">Change MPIN</string>
    <string name="lbl_Manage_Beneficiary">Manage Beneficiary</string>
    <string name="lbl_radiompn">MPIN</string>
    <string name="lbl_radiotranmpn">TRANSACTION MPIN</string>
    <string name="lbl_old_mpin">Old MPIN:</string>
    <string name="lbl_new_mpin">New MPIN:</string>
    <string name="lbl_retype_mpin">Retype MPIN:</string>
    <string name="lbl_old_tran_mpin">Old Transaction MPIN:</string>
    <string name="lbl_entr_tran_mpin">Enter Transaction MPIN</string>
    <string name="lbl_title_change_mpin">Change MPIN</string>
    <string name="lbl_change_btn">Change</string>
    <string name="alert_Changempin_1">New MPIN and Retype New MPIN must be same!</string>
    <string name="alert_Changempin_2">Please Enter MPIN Of Length 6</string>
    <string name="alert_Changempin_3">Please Enter Transaction MPIN Of Length 6</string>
    <string name="alert_Changempin_4">Entered And Re-Entered Transaction MPIN Must Be Same</string>
    <string name="alert_Changempin_5">MPIN Changed Successfully.</string>
    <string name="alert_Changempin_6">You Have Used This MPIN Recently, Please Choose Different One.</string>
    <string name="alert_Changempin_7">You Have Used This Transaction MPIN Recently, Please Choose Different One.</string>
    <string name="alert_Changempin_8">Enter Correct Old MPIN!</string>
    <string name="alert_Changempin_9">Could Not Set MPIN</string>
    <string name="alert_Changempin_10">TRANSACTION MPIN Changed Successfully.</string>
    <string name="lbl_show_details">Show Details</string>
    <string name="lbl_saving_and_current">Saving &amp; Current</string>
    <string name="alert_Changempin_11"> Enter Correct Old Transaction MPIN!</string>
    <string name="alert_089">No Record Found</string>
    <string name="lbl_acc_details">Account Details</string>
    <string name="lbl_branch">Branch:</string>
    <string name="lbl_account_type">Account Type :</string>
    <string name="lbl_acc_no">Account No :</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_ifsc_code">IFSC Code:</string>
    <string name="lbl_clear_balance">Clear Balance (In Rs.):</string>
    <string name="lbl_unclear_balance">Unclear Balance (In Rs.):</string>
    <string name="lbl_back">Back</string>
    <string name="alert_092">Account Details Not Available!</string>
    <string name="lbl_get_statement">Get Statement</string>
    <string name="lbl_mini_statement">Mini Statement</string>
    <string name="alert_Enter_Mpin">Enter MPIN</string>
    <string name="alert_Enter_benfacc">ReEnter Beneficiary Account Number</string>
    <string name="no_of_tran">No. Of Transaction</string>
    <string name="alert_Non_zeroNoOf_tran">Please Enter Non-Zero Number Of Transactions</string>
    <string name="alert_tran_upto25">Please Enter Transactions No. Upto 25</string>
    <string name="alert_entr_NoOf_tran">Enter No. Of Transactions</string>
    <string name="lbl_avail_balance">Account Balance</string>
    <string name="lbl_debite_acc">Debit Account:</string>
    <string name="lbl_amount">Amount :</string>
    <string name="lbl_remark">Remarks :</string>
    <string name="lbl_submit_btn">Submit</string>
    <string name="lbl_confirm_msg">Please Confirm Below Details</string>
    <string name="lbl_from_msg">From :</string>
    <string name="lbl_to_msg">To :</string>
    <string name="lbl_trantype">Transfer Type:</string>
    <string name="lbl_charges">Charges (If Any) :</string>
    <string name="lbl_bank_name">Bank Name</string>
    <string name="lbl_acc_holder_nm">Name:</string>
    <string name="confirm">Confirm</string>
    <string name="lbl_qr_send">Send Money Via QR Code</string>
    <string name="alert_requestAlready">Your Request Is Already Registered With Request Id </string>
    <string name="alert_SmsAfterSometime">Please Check SMS After Some Time.</string>
    <string name="alert_fundtranFailsServer">Fund Transfer Failed due to server problem.</string>
    <string name="alert_wrongtranpin">Wrong Transaction Pin</string>
    <string name="alert_arttemps">Attempts Remaining</string>
    <string name="login_alert_AccountLocked">Your Account Has Been Locked For Today</string>
    <string name="alert_problematServer">Problem At Server Please Contact To Bank.</string>
    <string name="alert_debitAccoutInvalid">Debit Account Is Invalid</string>
    <string name="alert_debitAccoutclosable">Debit Account Is Closable</string>
    <string name="alert_debitAccoutclosed">Debit Account Is Closed</string>
    <string name="alert_operationstopdeb">Operation Is Stopped For This Debit Account</string>
    <string name="alert_transacAmtNotMatch">Transaction Amount Is Not Matching With Installment Amount</string>
    <string name="alert_InsufficentBalance">Insufficient Balance</string>
    <string name="trnsfr_alert_failed">Transfer Failed Please Contact To Your Bank</string>
    <string name="alert_FundTransfersuccess">Fund Transfer Successful.</string>
    <string name="alert_reqId">Request Id</string>
    <string name="alert_plzSelectDebitAcc">Please Select Debit Account</string>
    <string name="alert_plzEnterAmount">Please Enter Amount.</string>
    <string name="alert_plzEnterValidAmo">Please Enter Valid Amount</string>
    <string name="alert_plzAmoutGrtZero">Please Enter Amount Greater Than Zero</string>
    <string name="alert_plzentrRemark">Please Enter Remarks</string>
    <string name="alert_RemarkLength200">Please Enter Remarks Having Length Less Than 200 Characters</string>
    <string name="alert_AccountEmpty">Account number is empty,Because Beneficiary not available</string>
    <string name="alert_enterTranMpin">Enter Transaction MPIN.</string>
    <string name="alert_TranmipnMust6dig">MPIN Must Be Of 6 Character</string>
    <string name="lbl_scan_opt">Select Scan Option</string>
    <string name="alert_fundTranExedLimit">Fund Transfer Amount Exceeds Limite.</string>
    <string name="alert_canNotSame">Can Not Transfer To Same Account</string>
    <string name="lbl_rech_mobile">Mobile</string>
    <string name="lbl_rech_DTH">DTH</string>
    <string name="lbl_rech_Datacard">Data Card</string>
    <string name="lbl_rech_AddNew">Add New</string>
    <string name="lbl_rech_Remove">Remove</string>
    <string name="lbl_rech_Recharges">Recharges</string>
    <string name="lbl_rech_Recharges1">Recharge</string>
    <string name="lbl_rech_Recharges_mob">Add Mobile No</string>
    <string name="lbl_rech_Recharges_dth">Add DTH No</string>
    <string name="lbl_view_history">View History</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="lbl_mob_no">Mobile No:</string>
    <string name="lbl_acc_number">Account Number</string>
    <string name="lbl_acc_numberconf">Confirm Account No</string>
    <string name="lbl_add_benf">Add Beneficiary</string>
    <string name="lbl_fetchnm_btn">Fetch Name</string>
    <string name="lbl_nm">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_nickname">Nick Name</string>
</resources>