<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/inc_hd"
            layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/inc_hd"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="vertical" >

            <!-- Balance Report Form -->

            <mbLib.CusFntTextView
                android:id="@+id/branch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lbl_branch"
                android:textColor="#372c24" >
            </mbLib.CusFntTextView>

            <mbLib.CustomEditText
                android:id="@+id/txt_branch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:text=""
                android:textColor="@color/rep_txt_color" >
            </mbLib.CustomEditText>

            <mbLib.CusFntTextView
                android:id="@+id/acnt_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lbl_account_type"
                android:textColor="#372c24" >
            </mbLib.CusFntTextView>

            <mbLib.CustomEditText
                android:id="@+id/txt_acnt_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number"
                android:text=""
                android:textColor="@color/rep_txt_color" >
            </mbLib.CustomEditText>

            <mbLib.CusFntTextView
                android:id="@+id/ach_acno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lbl_acc_no"
                android:textColor="#372c24" >
            </mbLib.CusFntTextView>

            <mbLib.CustomEditText
                android:id="@+id/txt_sch_acno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number"
                android:text=""
                android:textColor="@color/rep_txt_color" >
            </mbLib.CustomEditText>

            <mbLib.CusFntTextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lbl_name"
                android:textColor="#372c24" >
            </mbLib.CusFntTextView>

            <mbLib.CustomEditText
                android:id="@+id/txt_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""
                android:textColor="@color/rep_txt_color" >
            </mbLib.CustomEditText>

            <mbLib.CusFntTextView
                android:id="@+id/bal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lbl_clear_balance"
                android:textColor="#372c24" >
            </mbLib.CusFntTextView>

            <mbLib.CustomEditText
                android:id="@+id/txt_bal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number"
                android:text=""
                android:textColor="@color/rep_txt_color" >
            </mbLib.CustomEditText>

            <mbLib.CusFntTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/lbl_unclear_balance"
                android:textColor="#372c24" >
            </mbLib.CusFntTextView>

            <mbLib.CustomEditText
                android:id="@+id/unclearbal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="number"
                android:text=""
                android:textColor="@color/rep_txt_color" >
            </mbLib.CustomEditText>

            <mbLib.CustomButton
                android:id="@+id/btn_back_balrep"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:background="@mipmap/button_style"
                android:text="@string/lbl_back"
                android:visibility="invisible" />

            <!-- Balance Report Form Ends -->
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="0dip"
            android:layout_height="0dip" />
    </RelativeLayout>

</ScrollView>